---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: ????
  Bugfixes:
    - The lua commands now don't squash any output (but they now appear after the output..)
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 2024-12-05
  Features:
    - Added an api for modifying sent messages. The intent being the ability to filter.
    - Actually expose ability to clear chatlog for a player.
  Commands:
    - Replicated /command & /c
      Will not replicate any output (like printed error) as that'd require running it a second time.
      Running the given code a second time will cause *tons* of unintended consequences.
    - Logged /silent-command & /sc
    - Replicatd (kinda) /measured-command & /mc
      The measured time does not get saved as that's just unfeasible without running the code a second time.
      It also doesn't clear the engine's normal response as that'd clear the measured time.
  Bugfixes:
    - Fixed inconsistencies between clearing prints and regular prints. This was achieved by consolidating the functions more.
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2024-11-08
  Bugfixes:
    - Commands should no longer crash when entered from a server console
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2024-11-07
  Changes:
    - Updated shortcodes for 2.0
  Features:
    - Added a global setting to change how normal messages are sent.
    - Added /t and /team commands to send messages normally.
    - Added option to show timestamps next to each message. These are in-game time, as real time is simply not something mods can get.
    - Added imagify support for planets and space-locations (wrapped under the same setting)
  Commands:
    - Replicated /help & /h